--- a/.envdev
+++ b/.envdev
@@ -28,77 +28,46 @@ PREFIX="!"
 
 # Discord Server ID
 # Replace them with your own on a sandbox server!
-SANCTUM_ID="454425466821017611"
+SANCTUM_ID="505291035992260635"
 
 # Discord setup (Configred based on the server)
-ADMIN_ROLE="Overseer"
+ADMIN_ROLE="admin"
 
 # Role IDs (A = Obsidian, B = Genesis, C = Hand)
 # Replace them with your own on a sandbox server!
-GROUP_A_ROLE="470656524042371072"
-GROUP_B_ROLE="470668082441093121"
-GROUP_C_ROLE="470656609295794199"
+GROUP_A_ROLE="505293503840911360"
+GROUP_B_ROLE="505293640948645888"
+GROUP_C_ROLE="505293691678752768"
 
 GROUP_A_NAME="Obsidian Technologies"
 GROUP_B_NAME="Genesis Command"
 GROUP_C_NAME="The Hand"
 
-GROUP_A_CHANNEL_ID="493972208616603658"
-GROUP_B_CHANNEL_ID="493972336190685185"
-GROUP_C_CHANNEL_ID="493972354137849856"
+GROUP_A_CHANNEL_ID="505292122732101633"
+GROUP_B_CHANNEL_ID="505292233441017866"
+GROUP_C_CHANNEL_ID="505292318006575115"
 
-GROUP_A_LEADER_NAME="Kamala, Obsidian Vice President"
-GROUP_B_LEADER_NAME="Captain Montgomery"
-GROUP_C_LEADER_NAME="Dairo, High Prophet of The Hand"
+GROUP_A_LEADER_NAME="V.P. Kamala"
+GROUP_B_LEADER_NAME="Cpt. Montgomery"
+GROUP_C_LEADER_NAME="Prophet Dairo"
 
 # Channel IDs
 # Replace them with your own on a sandbox server!
-OUTSKIRTS_CHANNEL_ID="462382076927148054"
-TAVERN_CHANNEL_ID="462684096024543242"
-GATE_CHANNEL_ID="459196623923445779"
-STASIS_CHANNEL_ID="468984551113228318"
-CRYSTAL_SHORES_CHANNEL_ID="482629581690372099"
-SEA_OF_FOG_CHANNEL_ID="464150321699225634"
-DEADLANDS_CHANNEL_ID="459196395119837195"
-HELLS_GATE_CHANNEL_ID="464238060243124245"
-TEST_CHANNEL_ID="464838060262293514"
-
-# Bot IDs
-# Replace them with your own on a sandbox server!
-MORI_ID="461294299515191306"
-RAVAGER_ID="458036985353732097"
-MOSIAH_ID="457713779078332416"
-GRAZE_ID="460640089198821377"
-SONYA_ID="458078969653100554"
-REY_ID="462675530928357376"
-ALEXIS_ID="462708244171718656"
-MONTGOMERY_GENESIS_ID="482642611023249409"
-KAMALA_OBSIDIAN_ID="482644250354384906"
-DAIRO_HAND_ID="482644985318211594"
-LIBRARIAN_ID="458033243481047082"
-
-# Bot Names
-# Replace them with your own on a sandbox server!
-GHOST_NAME="Ghost 5.0.1"
+LIBRARY_CHANNEL_ID="505500289089142812"
+OUTSKIRTS_CHANNEL_ID="505292883394560000"
+TAVERN_CHANNEL_ID="505292836963352576"
+GATE_CHANNEL_ID="505291599647866890"
+STASIS_CHANNEL_ID=""
+CRYSTAL_SHORES_CHANNEL_ID="505292474412171274"
+SEA_OF_FOG_CHANNEL_ID="505292540434579466"
+DEADLANDS_CHANNEL_ID="505292597045231618"
 
 # Bot Tokens
 ADAM_TOKEN=""
-RAVAGER_TOKEN=""
-WOLF_TOKEN=""
-CROW_TOKEN=""
-MOSIAH_TOKEN=""
-REY_TOKEN=""
-ALEXIS_TOKEN=""
-GRAZE_TOKEN=""
-MORI_TOKEN=""
-LIBRARIAN_TOKEN=""
-DRAVEN_MAW_TOKEN=""
-SONYA_TOKEN=""
-MONTGOMERY_GENESIS_TOKEN=""
 KAMALA_OBSIDIAN_TOKEN=""
+MONTGOMERY_GENESIS_TOKEN=""
 DAIRO_HAND_TOKEN=""
-GHOST_TOKEN=""
-DEVELOPER_TOKEN=""
+LIBRARIAN_TOKEN=""
 
 # Channel access roles (must match roles in your server)
 # Replace them with your own on a sandbox server!
@@ -111,5 +80,5 @@ RANK_2_THRESHOLD=15
 RANK_3_THRESHOLD=30
 
 # Server
-SERVER_ADDRESS="http://skullboxstudios.com"
+SERVER_ADDRESS="http://127.0.0.1"
 SERVER_PASS_KEY=""
