Created an empty shell of a server

--- a/ADAM_Dairo/package.json
+++ b/ADAM_Dairo/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nodejs-elasticbeanstalk",
+  "name": "ADAM_Dairo",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
