--- a/ADAM_Kamala/package.json
+++ b/ADAM_Kamala/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nodejs-elasticbeanstalk",
+  "name": "ADAM_Kamala",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
