--- a/Librarian/package.json
+++ b/Librarian/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nodejs-elasticbeanstalk",
+  "name": "Librarian",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
