--- a/Shared/package.json
+++ b/Shared/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "shared",
+  "name": "Shared",
   "version": "1.0.0",
   "description": "",
-  "main": "calc_random.js",
+  "main": "shared.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,6 +10,6 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^6.1.0",
-    "sync-request": "^6.0.0"
+    "socket.io-client": "^2.1.1"
   }
 }
