--- a/SERVER_City/package.json
+++ b/SERVER_City/package.json
@@ -13,8 +13,8 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^6.1.0",
-    "express": "^4.16.4",
     "forever": "^0.15.3",
-    "socket.io": "^2.1.1"
+    "socket.io": "^2.1.1",
+    "socketio-auth": "^0.1.1"
   }
 }
