Factions can be joined when all necessary bots and the server are running

--- a/.envdev
+++ b/.envdev
@@ -83,3 +83,9 @@ RANK_3_THRESHOLD=30
 SERVER_ADDRESS="http://127.0.0.1"
 SERVER_PASS_KEY=""
 SERVER_PORT="4500"
+
+# Database
+DATABASE_HOST="localhost"
+DATABASE_USER=""
+DATABASE_PASSWORD=""
+
