--- a/SERVER_City/package.json
+++ b/SERVER_City/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "dotenv": "^6.1.0",
     "forever": "^0.15.3",
+    "mysql": "^2.16.0",
     "socket.io": "^2.1.1",
     "socketio-auth": "^0.1.1"
   }
