Created empty Graze

--- a/.envdev
+++ b/.envdev
@@ -69,6 +69,7 @@ MONTGOMERY_GENESIS_TOKEN=""
 DAIRO_HAND_TOKEN=""
 LIBRARIAN_TOKEN=""
 MORI_TOKEN=""
+GRAZE_TOKEN=""
 
 # Channel access roles (must match roles in your server)
 # Replace them with your own on a sandbox server!
