--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "installdairo": "cd ADAM_Dairo && npm install",
     "installlibrarian": "cd BOT_Librarian && npm install",
     "installmori": "cd BOT_Mori && npm install",
+    "installgraze": "cd BOT_Graze && npm install",
     "startcity": "cd SERVER_City && npm start",
     "startadam": "cd ADAM && npm start",
     "startkamala": "cd ADAM_Kamala && npm start",
@@ -18,6 +19,7 @@
     "startdairo": "cd ADAM_Dairo && npm start",
     "startlibrarian": "cd BOT_Librarian && npm start",
     "startmori": "cd BOT_Mori && npm start",
+    "startgraze": "cd BOT_Graze && npm start",
     "restartcity": "cd SERVER_City && npm restart",
     "restartadam": "cd ADAM && npm restart",
     "restartkamala": "cd ADAM_Kamala && npm restart",
@@ -25,6 +27,7 @@
     "restartdairo": "cd ADAM_Dairo && npm restart",
     "restartlibrarian": "cd BOT_Librarian && npm restart",
     "restartmori": "cd BOT_Mori && npm restart",
+    "restartgraze": "cd BOT_Graze && npm restart",
     "stopcity": "cd SERVER_City && npm stop",
     "stopadam": "cd ADAM && npm stop",
     "stopkamala": "cd ADAM_Kamala && npm stop",
@@ -32,10 +35,11 @@
     "stopdairo": "cd ADAM_Dairo && npm stop",
     "stoplibrarian": "cd BOT_Librarian && npm stop",
     "stopmori": "cd BOT_Mori && npm stop",
-    "installall": "npm install && concurrently \"cd Shared && npm install\" \"npm run installcity\" \"npm run installadam\" \"npm run installkamala\" \"npm run installcptmon\" \"npm run installdairo\" \"npm run installlibrarian\" \"npm run installmori\"",
-    "startall": "concurrently \"npm run startcity\" \"npm run startadam\" \"npm run startkamala\" \"npm run startcptmon\" \"npm run startdairo\" \"npm run startlibrarian\" \"npm run startmori\"",
-    "restartall": "concurrently \"npm run restartcity\" \"npm run restartadam\" \"npm run restartkamala\" \"npm run restartcptmon\" \"npm run restartdairo\" \"npm run restartlibrarian\" \"npm run restartmori\"",
-    "stopall": "concurrently \"npm run stopcity\" \"npm run stopadam\" \"npm run stopkamala\" \"npm run stopcptmon\" \"npm run stopdairo\" \"npm run stoplibrarian\" \"npm run stopmori\""
+    "stopgraze": "cd BOT_Graze && npm stop",
+    "installall": "npm install && concurrently \"cd Shared && npm install\" \"npm run installcity\" \"npm run installadam\" \"npm run installkamala\" \"npm run installcptmon\" \"npm run installdairo\" \"npm run installlibrarian\" \"npm run installmori\" \"npm run installgraze\"",
+    "startall": "concurrently \"npm run startcity\" \"npm run startadam\" \"npm run startkamala\" \"npm run startcptmon\" \"npm run startdairo\" \"npm run startlibrarian\" \"npm run startmori\" \"npm run startgraze\"",
+    "restartall": "concurrently \"npm run restartcity\" \"npm run restartadam\" \"npm run restartkamala\" \"npm run restartcptmon\" \"npm run restartdairo\" \"npm run restartlibrarian\" \"npm run restartmori\" \"npm run restartgraze\"",
+    "stopall": "concurrently \"npm run stopcity\" \"npm run stopadam\" \"npm run stopkamala\" \"npm run stopcptmon\" \"npm run stopdairo\" \"npm run stoplibrarian\" \"npm run stopmori\" \"npm run stopgraze\""
   },
   "author": "",
   "license": "ISC",
